@@ -1,3 +1,7 @@
+2004-06-14  David Malcolm  <dmalcolm@redhat.com>
+
+	* cong-source-view.c: Fixed build problems
+
 2004-06-11  David Malcolm  <david@davemalcolm.demon.co.uk>
 
 	* cong-plugin.c: 
